fixes on mobile project page

--- a/css/about.css
+++ b/css/about.css
@@ -40,7 +40,7 @@
 }
 
 .about-img img {
-  width: 300px;
+  width: 100%;
 }
 
 .about-text {
@@ -94,6 +94,7 @@
 
 .redir {
   display: block;
+  height: auto;
 /*  background-color: #000;*/
 }
 
@@ -155,5 +156,11 @@
   }
   .skill-list {
     padding-left: 0px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .about-text {
+    margin-top: 50px;
   }
 }
